--- a/packages/pixler/package.json
+++ b/packages/pixler/package.json
@@ -8,6 +8,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@faviconate/typescript-config": "workspace:*",
     "@types/node": "18.6.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
