--- a/packages/pixler/tsconfig.json
+++ b/packages/pixler/tsconfig.json
@@ -1,3 +1,5 @@
 {
-  "extends": "@faviconate/typescript-config/react-library.json"
+  "extends": "@faviconate/typescript-config/react-library.json",
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
